# file_convection

./: .dockerignore  .env  .flaskenv  .gitignore  BMMASSOCIATES_1820345112_Standard_Csv_Format (3).csv  BMMASSOCIATES_1820345112_Standard_Csv_Format (3)_cleaned.csv  BMMASSOCIATES_1820345112_Standard_Csv_Format (3)_cleaned.xlsx  BMMASSOCIATES_1820345112_Standard_Csv_Format (3)_cleaned_fixed.csv  BMMASSOCIATES_1820345112_Standard_Csv_Format (3)_cleaned_fixed.xlsx  Dockerfile  Procfile  README.md  Untitled-1.py  app.py  apt.txt  clean_csv.py  config.py  debug_pdf.py  gunicorn_config.py  package-lock.json  pdf_cleaner.py  pyproject.toml  render.yaml  requirements.txt  start.sh  start_prod.ps1  wsgi.py
outputs/: ABSA.csv  FNB.csv  processed_1230dd9f-e8f1-4262-a2f0-207e973458ea_FNB.csv  processed_28fcf2e1-617c-4401-9f27-b1eb6479f23b_FNB.csv  processed_2a9841f3-9128-48d8-a300-b1c1ff70485d_Standard.csv  processed_2aa30d20-00b7-471d-a0da-f3c6c11b9037_account_statement_2_2.csv  processed_35881c59-82b4-43d1-8439-00b5a4f2ef52_ABSA.csv  processed_3b85b193-521b-4c61-8e62-115e90fa95ae_Standard.csv  processed_3d54b71b-2baf-4f40-a49a-69cdc2b35eff_ABSA.csv  processed_5143d6f9-fa66-4265-9782-24f0e0ebe6fb_FNB.csv  processed_5f92b7cd-f1ff-48b4-aba2-7802c5e11f22_FNB.csv  processed_6bcb670c-a9ad-4add-8e49-006250d8d0d0_account_statement_2_2.csv  processed_77478e82-be3e-4d11-ae22-527256e9804a_FNB.csv  processed_8e956e96-2409-43bc-8959-ab5267cd37e5_account_statement_2_2.csv  processed_ABSA.csv  processed_ac9fb58f-79d8-442f-a4b4-01cc99a48839_account_statement_2_2.csv  (+6 more)
pdf-to-csv-web/: README.md  (+3 more)
(+35 files in other folders)
