[tool.poetry]
name = "file-convection"
version = "1.0.0"
description = "File conversion application"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11.7"
Flask = "^2.0.1"
Werkzeug = "^2.0.3"
waitress = "^2.1.2"
numpy = "^1.24.3"
pandas = "^1.5.3"
pdfplumber = "^0.7.4"
python-dotenv = "^0.19.2"
tabula-py = "^2.3.0"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"